# ShellStartupDebug

./: .gitignore  INSTALL  Makefile.in  README  README.md  README.new  TAGS  aclocal.m4  build.rtm  config.status  configure  configure.ac  findLuaPkgs  makefile  shell_startup_debug.spec
examples/centos/bash/: bashrc  profile
examples/centos/csh/: csh.cshrc  csh.login
examples/mac/bash/: bashrc  profile
examples/mac/csh/: csh.cshrc  csh.login
examples/mac/zsh/: zlogin  zlogout  zprofile  zshenv  zshrc
examples/ubuntu/bash/: bash.bashrc  profile
examples/ubuntu/csh/: csh.cshrc  csh.login
examples/ubuntu/zsh/: zlogin  zlogout  zprofile  zshenv  zshrc
setup/: bash.in  csh.in
src/: Bare.lua  BaseShell.lua  Bash.lua  COPYRIGHT  CmdLineOptions.lua  Csh.lua  DBG_INDENT_cmd.in  ECHO_cmd.in  Output.lua  Version.lua  epoch.in  shell_startup.in
tools/: .luatools_modules.list  BeautifulTbl.lua  ColumnTable.lua  Dbg.lua  capture.lua  fileOps.lua
